# GXS_2024_VisionCode

./: README.md  gxs_startup.bash  photo.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/adjust_hsv/lib/adjust_hsv/: adjust
install/adjust_hsv/share/adjust_hsv/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/adjust_hsv/share/adjust_hsv/cmake/: adjust_hsvConfig.cmake
install/binary_detector/include/binary_detector/: binary.hpp
install/binary_detector/lib/binary_detector/: binary
install/binary_detector/share/binary_detector/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/binary_detector/share/binary_detector/cmake/: binary_detectorConfig.cmake
install/camera_driver/lib/camera_driver/: image_publisher
install/camera_driver/share/camera_driver/: local_setup.sh  package.sh
install/colorblock_detector/lib/colorblock_detector/: colorblock
install/colorblock_detector/share/colorblock_detector/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/colorblock_detector/share/colorblock_detector/cmake/: colorblock_detectorConfig.cmake
install/colorblock_detector/share/colorblock_detector/config/: colorblock.yaml
install/colorblock_detector/share/colorblock_detector/launch/: bringup.launch.py
install/gxs_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
install/gxs_serial_driver/lib/gxs_serial_driver/: gxs_serial_driver_node
install/gxs_serial_driver/share/gxs_serial_driver/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gxs_serial_driver/share/gxs_serial_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  gxs_serial_driverConfig.cmake
install/gxs_serial_driver/share/gxs_serial_driver/launch/: serial_driver.launch.py
install/line_follow/lib/line_follow/: lf
install/line_follow/share/line_follow/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/qrmsg/share/qrmsg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/qrmsg/share/qrmsg/cmake/: ament_cmake_export_dependencies-extras.cmake  export_qrmsg__rosidl_generator_cExport-noconfig.cmake  export_qrmsg__rosidl_generator_cExport.cmake  export_qrmsg__rosidl_generator_cppExport.cmake  export_qrmsg__rosidl_generator_pyExport.cmake  export_qrmsg__rosidl_typesupport_fastrtps_cExport.cmake  (+8 more)
log/: latest_build
src/: photo.py
src/adjust/: CMakeLists.txt
src/adjust/install/: local_setup.sh  setup.sh
src/adjust/log/: latest_build
src/adjust/src/: adjust.cpp
src/binary_detector/: CMakeLists.txt  package.xml
src/binary_detector/include/binary_detector/: binary.hpp
src/binary_detector/install/: local_setup.sh  setup.bash  setup.sh
src/binary_detector/install/binary_detector/share/binary_detector/: package.bash  package.zsh
src/binary_detector/log/: latest_build
src/binary_detector/src/: binary.cpp  main.cpp
src/camera_driver/: CMakeLists.txt
src/camera_driver/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
src/camera_driver/log/: latest_build
src/camera_driver/src/: camera_driver.cpp
src/colorblock_detector/: CMakeLists.txt
src/colorblock_detector/config/: colorblock.yaml
src/colorblock_detector/src/: colorblock.cpp  colorblock_new.cpp
src/image_data/: photo.py
src/image_data/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/image_data/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/line_follow/: CMakeLists.txt  package.xml  setup.py
src/line_follow/launch/: lf.launch.py  line_follower_launch.py
src/line_follow/line_follow/: line_follow.py  test.py
src/line_follow/script/: 1.ps1  lf.py
src/line_follow/src/: lf.cpp
src/log/: latest_build
src/qrmsg/: CMakeLists.txt  package.xml
src/qrmsg/msg/: Lf.msg
src/qrmsg/srv/: Qr.srv
src/rm_serial_deiver/: package.xml
src/rm_serial_deiver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
src/rm_serial_deiver/src/: rm_serial_driver.cpp
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: rm_serial_driver.cpp
(+61 files in other folders)
