<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>binary_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1984861420@qq.com">minehill</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>qrmsg</depend>
  <depend>std_msgs</depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>opencv4</build_depend>
  <build_depend>zbar</build_depend>
  <exec_depend>opencv4</exec_depend>
  <exec_depend>zbar</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
